--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/bcrypt": "^6.0.0",
+    "@types/cron": "^2.4.3",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.58.7",
     "class-transformer": "^0.5.1",
