--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bullmq": "^5.58.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "google-auth-library": "^10.3.0",
     "googleapis": "^159.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
