--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.78",
+    "@langchain/langgraph": "^0.4.9",
+    "@langchain/openai": "^0.6.14",
     "@nest-modules/mailer": "^1.3.22",
     "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.0.1",
