--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-validator": "^0.14.2",
     "google-auth-library": "^10.3.0",
     "googleapis": "^159.0.0",
+    "langsmith": "^0.3.71",
     "nodemailer": "^7.0.6",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
